--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "paths": {
+      "@/*": ["./src/*"],
+      "@ui": ["./src/components/ui"]
+    },
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
