--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "plop":"plop",
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@types/node": "^22.15.21",
     "@vitejs/plugin-vue": "^5.1.2",
+    "plop": "^4.0.1",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
